--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
-        "dev": "nodemon server.js"
+        "dev": "nodemon server.js",
+        "update-data": "node scripts/update_data_from_csv.js"
     },
     "author": "",
     "license": "MIT",
